k8s/eck-apm/apm.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apm
  namespace: eck
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - apm.example.com
    secretName: apm-tls-secret
  rules:
  - host: apm.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: apm-apm-http
          servicePort: 8200
